--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="imgWrapper">
           <img
             id="earthImg"
-            src="/images/earth.png"
+            src="./images/earth.png"
             width="250px"
             height="250px"
             alt=""
