Change path to imgs

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div id="topBlock"></div>
       <div id="bottomBlock"></div>
       <div id="character">
-        <img src="/images/plane2.png" width="125px" height="110px" alt="" />
+        <img src="./images/plane2.png" width="125px" height="110px" alt="" />
       </div>
       <div id="sun"></div>
       <div id="moon"></div>
