--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alfred PILOTEN</title>
+    <link rel="icon" href="./icon.ico"/>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -14,15 +15,15 @@
           <img
             id="earthImg"
             src="./images/earth.png"
-            width="250px"
-            height="250px"
+            width="200px"
+            height="200px"
             alt=""
           />
         </div>
 
         <div id="logoText">
           ALFREDS <br />
-          ÄVENTYR
+          FLYGÄVENTYR
         </div>
       </div>
 
@@ -49,6 +50,7 @@
       <button onclick="startGame()">SPELA IGEN</button>
     </div>
     <div id="game" onclick="jump()">
+      <div id="bg"></div>
       <p id="score">0</p>
       <div id="topBlock"></div>
       <div id="bottomBlock"></div>
