--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="manifest" href="manifest.json" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alfred PILOTEN</title>
+    <title>Alfreds flygäventyr</title>
     <link rel="icon" href="./icon.ico"/>
     <link rel="stylesheet" href="style.css" />
   </head>
