--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alfreds flygäventyr</title>
-    <link rel="icon" href="./icon.ico"/>
+    <link rel="icon" href="./iconalfred.ico"/>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
