Add apple touch icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alfreds flygäventyr</title>
     <link rel="icon" href="./iconalfred.ico"/>
+    <link rel="apple-touch-icon image_src" href="apple-touch-icon.png">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
